# dir2file

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/: main.py
src/d2f/: __init__.py  main.py
